--- a/css/estilo.css
+++ b/css/estilo.css
@@ -81,7 +81,7 @@ h4 {
     margin-right: 5px;
 }
 
-#tab-sunless, #tab-moskitoff, #tab-australian, #tab-negrarosa, #tab-sanavita, #tab-loreal_dpgp_ouro, #tab-loreal_dpgp_prata, #tab-loreal_dpgp_bronze, #tab-integral_medica, #tab-australian_gold, #tab-cenoura_bronze, #tab-scjohnson {
+#tab-sunless, #tab-moskitoff, #tab-negrarosa, #tab-sanavita, #tab-loreal_dpgp_ouro, #tab-loreal_dpgp_prata, #tab-loreal_dpgp_bronze, #tab-integral_medica, #tab-australian_gold_esmeralda, #tab-australian_gold_topazio, #tab-cenoura_bronze, #tab-scjohnson {
     font-family: 'Travel';
     background-color: #79c9d1;
     color: white;
@@ -90,10 +90,6 @@ h4 {
 
 #tab-moskitoff {
     background-color: #e0712b; /* Moskitoff */
-}
-
-#tab-australian {
-    background-color: red;
 }
 
 #tab-negrarosa {
@@ -122,8 +118,12 @@ h4 {
     background-color: #ED1C24;
 }
 
-#tab-australian_gold {
-    background-color: #876137;
+#tab-australian_gold_esmeralda {
+    background-color: #099F5F;
+}
+
+#tab-australian_gold_topazio {
+    background-color: #E3A541;
 }
 
 #tab-cenoura_bronze {
