--- a/css/estilo.css
+++ b/css/estilo.css
@@ -463,6 +463,10 @@ th, td {
         width: 65%;
     }
 
+    .logo_vichy_laroche {
+        width: 50%;
+    }
+
     .logo_footer {
         width: 15%;
         margin-top: 10px;
